Add kubernetes releases to non-precompiled-releases.yml
Co-authored-by: Winnie Kwon <lkwon@pivotal.io>
Co-authored-by: Lubron Zhan <lzhan@vmware.com>
Signed-off-by: Carlo Colombo <ccolombo@pivotal.io>

--- a/manifests/ops-files/non-precompiled-releases.yml
+++ b/manifests/ops-files/non-precompiled-releases.yml
@@ -17,3 +17,6 @@
     sha1: 41df19697d6a69d2552bc2c132928157fa91abe0
     url: https://bosh.io/d/github.com/cloudfoundry-incubator/bpm-release?v=1.0.4
     version: 1.0.4
+  - name: kubernetes
+    url: hardcode
+    version: 1.0.0
