--- a/manifests/ops-files/non-precompiled-releases.yml
+++ b/manifests/ops-files/non-precompiled-releases.yml
@@ -18,5 +18,5 @@
     url: https://bosh.io/d/github.com/cloudfoundry-incubator/bpm-release?v=1.0.4
     version: 1.0.4
   - name: kubernetes
-    url: hardcode
-    version: 1.0.0
+    url: https://storage.googleapis.com/kubo-pipeline-store-test/kubernetes-release.tar.gz
+    version: 0+dev.2
