Add using latest kubernetes release to misc/dev.yml
Co-authored-by: Winnie Kwon <lkwon@pivotal.io>
Co-authored-by: Lubron Zhan <lzhan@vmware.com>

--- a/manifests/ops-files/misc/dev.yml
+++ b/manifests/ops-files/misc/dev.yml
@@ -3,3 +3,9 @@
   value:
     name: kubo
     version: latest
+
+- type: replace
+  path: /releases/name=kubernetes?
+  value:
+    name: kubernetes
+    version: latest
