--- a/manifests/cloud-config/iaas/gcp/use-vm-extensions.yml
+++ b/manifests/cloud-config/iaas/gcp/use-vm-extensions.yml
@@ -4,5 +4,5 @@ vm_extensions:
     service_account: ((cfcr_master_service_account_address))
   name: ((deployment_name))-master-cloud-properties
 - cloud_properties:
-    service_accoqunt: ((cfcr_worker_service_account_address))
+    service_account: ((cfcr_worker_service_account_address))
   name: ((deployment_name))-worker-cloud-properties
