--- a/manifests/ops-files/misc/dev.yml
+++ b/manifests/ops-files/misc/dev.yml
@@ -1,17 +1,11 @@
-- type: remove
-  path: /releases/name=kubo
-
 - type: replace
-  path: /releases/-
+  path: /releases/name=kubo
   value:
     name: kubo
     version: latest
 
-- type: remove
-  path: /releases/name=kubernetes
-
 - type: replace
-  path: /releases/-
+  path: /releases/name=kubernetes?
   value:
     name: kubernetes
     version: latest
