Add dev url to kubernetes-windows release [#165551713]
Signed-off-by: Winnie Kwon <lkwon@pivotal.io>

--- a/manifests/ops-files/windows/add-worker.yml
+++ b/manifests/ops-files/windows/add-worker.yml
@@ -25,7 +25,8 @@
   path: /releases/-
   value:
     name: "kubernetes-windows"
-    version: latest
+    url: https://storage.googleapis.com/kubo-pipeline-store-test/kubernetes-windows-release.tar.gz
+    version: 0.0.0-dev.7
 
 - type: replace
   path: /addons/-
