--- a/manifests/ops-files/windows/add-worker.yml
+++ b/manifests/ops-files/windows/add-worker.yml
@@ -1,11 +1,11 @@
-- path: /releases/-
+- path: /releases/name=kubo
   type: replace
   value:
     name: kubo
     sha1: 05ead5f098611e25a6fc6e5cfb33825cf1c9b8ae
     url: https://storage.googleapis.com/kubo-precompiled-releases/kubo-windows-0.31.0-windows2019-2019.2-20190325-131732-878123.tgz
     version: 0.35.0
-- path: /releases/-
+- path: /releases/name=docker
   type: replace
   value:
     name: docker
