Allow customizing Windows CIDRs
Pull the pod CIDR from flanneld on Linux, expose the kubedns service IP
with an opsfile

--- a/manifests/cfcr.yml
+++ b/manifests/cfcr.yml
@@ -42,6 +42,8 @@ instance_groups:
   - name: bpm
     release: bpm
   - name: flanneld
+    provides:
+      flanneld: {as: worker-flanneld}
     properties:
       tls:
         etcdctl:
