Move docker-windows to inside kubo

--- a/manifests/ops-files/windows/add-worker.yml
+++ b/manifests/ops-files/windows/add-worker.yml
@@ -92,7 +92,7 @@
           kubernetes: ((tls-kubernetes))
       release: kubo
     - name: docker-windows
-      release: docker
+      release: kubo
     name: windows-worker
     networks:
     - name: default
