Precompile kubo against ubuntu-xenial/456.30

--- a/manifests/cfcr.yml
+++ b/manifests/cfcr.yml
@@ -439,9 +439,12 @@ instance_groups:
 name: cfcr
 releases:
 - name: kubo
-  sha1: 8c3d2c9e4de5b434e2d1d743c58dffa9391c5185
-  url: https://storage.googleapis.com/kubo-precompiled-releases/kubo-0.36.0-ubuntu-xenial-456.27-20191002-215647-918638225.tgz
-  version: 0.36.0
+  sha1: 569920cbe138c8596cc9362260085972e5114257
+  stemcell:
+    os: ubuntu-xenial
+    version: 456.3
+  url: https://storage.googleapis.com/kubo-precompiled-releases/kubo-0.37.0-ubuntu-xenial-456.30-20191009-153050-940456778.tgz
+  version: 0.37.0
 - name: cfcr-etcd
   sha1: f87fdefcd1754da18d600aae1137466e733271f3
   url: https://storage.googleapis.com/kubo-precompiled-releases/cfcr-etcd-1.11.1-ubuntu-xenial-456.30-20191008-185029-871352872.tgz
