--- a/manifests/ops-files/windows/add-worker.yml
+++ b/manifests/ops-files/windows/add-worker.yml
@@ -2,9 +2,9 @@
   type: replace
   value:
     name: kubo-windows
-    sha1: 05ead5f098611e25a6fc6e5cfb33825cf1c9b8ae
-    url: https://storage.googleapis.com/kubo-precompiled-releases/kubo-windows-0.31.0-windows2019-2019.2-20190325-131732-878123.tgz
-    version: 0.31.0
+    sha1: 6eab00861ebe8396bf02529c670dca12d62e42a4
+    url: https://github.com/cloudfoundry-incubator/kubo-release-windows/releases/download/v0.38.0/kubo-release-windows-0.38.0.tgz
+    version: 0.38.0
 - path: /stemcells/-
   type: replace
   value:
