--- a/manifests/cfcr.yml
+++ b/manifests/cfcr.yml
@@ -450,9 +450,12 @@ releases:
   url: https://storage.googleapis.com/kubo-precompiled-releases/cfcr-etcd-1.11.1-ubuntu-xenial-456.30-20191008-185029-871352872.tgz
   version: 1.11.1
 - name: docker
-  sha1: 4826fb6de955c3d26eccfb42704b48dbe0189542
-  url: https://storage.googleapis.com/kubo-precompiled-releases/docker-35.3.3-ubuntu-xenial-456.30-20191008-184603-318272613.tgz
-  version: 35.3.3
+  sha1: 3f984427501e1ab8da5d7c43bb12786fb7f2298b
+  stemcell:
+    os: ubuntu-xenial
+    version: 456.3
+  url: https://storage.googleapis.com/kubo-precompiled-releases/docker-35.3.4-ubuntu-xenial-456.30-20191010-220825-027336158.tgz
+  version: 35.3.4
 - name: bpm
   sha1: 9641c3efe4a6b74799ebaf01315bdb1d43924289
   url: https://storage.googleapis.com/kubo-precompiled-releases/bpm-1.0.4-ubuntu-xenial-456.30-20191008-185643-193448757.tgz
