Add back image-pull-progress-deadline
It's required because Windows images are so large they regularly hit the
default 1m timeout

--- a/manifests/ops-files/windows/add-worker.yml
+++ b/manifests/ops-files/windows/add-worker.yml
@@ -27,6 +27,7 @@
         k8s-args:
           cni-bin-dir: C:\var\vcap\jobs\kubelet-windows\packages\cni-windows\bin
           container-runtime: docker
+          image-pull-progress-deadline: 20m
           kubeconfig: C:\var\vcap\jobs\kubelet-windows\config\kubeconfig
           network-plugin: cni
           pod-infra-container-image: mcr.microsoft.com/k8s/core/pause:1.2.0
