Adds empty tag k8s-args to kube-scheduler
Authored-by: Gene Hynson <ghynson@pivotal.io>

--- a/manifests/cfcr.yml
+++ b/manifests/cfcr.yml
@@ -290,6 +290,7 @@ instance_groups:
           kubeconfig: /var/vcap/jobs/kube-scheduler/config/kubeconfig
         disablePreemption: false
         kind: KubeSchedulerConfiguration
+      k8s-args:
       tls:
         kubernetes: ((tls-kubernetes))
     release: kubo
