--- a/manifests/cfcr.yml
+++ b/manifests/cfcr.yml
@@ -455,12 +455,12 @@ releases:
   url: https://storage.googleapis.com/kubo-precompiled-releases/cfcr-etcd-1.12.4-ubuntu-xenial-621.125-20210512-034001-731258114.tgz
   version: 1.12.4
 - name: docker
-  sha1: 56dc3f97e6a5babdad2888ef121835d64500448a
+  sha1: 3205535fa194be3a41f70684c79e7bbbef0fc9d2
   stemcell:
-    os: ubuntu-xenial
-    version: 621.125
-  url: https://storage.googleapis.com/kubo-precompiled-releases/docker-35.3.4-ubuntu-xenial-621.125-20210512-033945-639048686.tgz
-  version: 35.3.4
+    os: ubuntu-bionic
+    version: 1.1
+  url: https://storage.googleapis.com/kubo-precompiled-releases/docker-36.0.0-ubuntu-bionic-1.1-20210605-232104-167720752.tgz
+  version: 36.0.0
 - name: bpm
   sha1: 194dab5d404fb686c73693c85ad929f22e66d083
   stemcell:
