Update bosh-dns-aliases to use bionic
Signed-off-by: Neil Hickey <nhickey@vmware.com>

--- a/manifests/cfcr.yml
+++ b/manifests/cfcr.yml
@@ -1,7 +1,7 @@
 addons:
 - include:
     stemcell:
-    - os: ubuntu-xenial
+    - os: ubuntu-bionic
   jobs:
   - name: kubo-dns-aliases
     release: kubo
